--- a/styles/index.css
+++ b/styles/index.css
@@ -43,3 +43,42 @@
   line-height: 80px;
   text-align: center;
 }
+
+/* 65% offer section styles */
+.discount-65 {
+  width: 50%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.discount-65 .offer-title {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 52px;
+  text-align: center;
+}
+.discount-65 .holiday-title {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 29px;
+  text-align: center;
+  margin-top: 36px;
+}
+.discount-65 .category-title {
+  color: rgb(7, 2, 17);
+  font-family: Inter;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 38px;
+  text-align: center;
+  margin-top: 16px;
+}
+.discount-65, img {
+  width: 500px;
+  height: 350px;
+  align-items: center;
+  margin-top: 40px;
+}
