--- a/styles/index.css
+++ b/styles/index.css
@@ -173,3 +173,51 @@ img {
   border: none;
   margin-top: 50px;
 }
+
+/* portfolio section styles */
+.portfolio-container {
+  width: 82%;
+  max-width: 1320px;
+  margin: 40px auto;
+}
+.portfolio-container h3 {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 29px;
+  text-align: left;
+  margin-bottom: 16px;
+}
+.portfolio-container h2 {
+  color: rgb(7, 2, 17);
+  font-family: Merriweather;
+  font-size: 39px;
+  font-weight: 800;
+  line-height: 50px;
+  text-align: left;
+  text-transform: capitalize;
+  width: 480px;
+  margin-bottom: 20px;
+}
+.portfolio-container p {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: left;
+  width: 750px;
+}
+.portfolio-container .portfolio-img1 {
+  display: flex;
+  gap: 20px;
+  width: 350px;
+  height: 370px;
+}
+.portfolio-container .portfolio-img2 {
+    display: flex;
+    gap: 20px;
+    width: 350px;
+    height: 370px;
+}
