--- a/styles/index.css
+++ b/styles/index.css
@@ -216,8 +216,81 @@ img {
   height: 370px;
 }
 .portfolio-container .portfolio-img2 {
-    display: flex;
-    gap: 20px;
-    width: 350px;
-    height: 370px;
+  display: flex;
+  gap: 20px;
+  width: 350px;
+  height: 370px;
+  margin-bottom: 100px;
+}
+
+/* subscribe section styles */
+.subscribe-container {
+  width: 82%;
+  max-width: 1320px;
+  margin: 40px auto;
+  height: auto;
+  text-align: center;
+  border-radius: 16px;
+  background: rgba(255, 0, 0, 0.05);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 80px 0px 80px 0px;
+}
+.subscribe-container img {
+  width: 123px;
+  height: 123px;
+  margin-bottom: 20px;
+}
+.subscribe-container h1 {
+  width: 450px;
+  color: rgb(7, 2, 17);
+  font-family: Merriweather;
+  font-size: 42px;
+  font-weight: 800;
+  line-height: 50px;
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: 22px;
+}
+.subscribe-container p {
+  width: 730px;
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: center;
+}
+.subscribe-container form {
+  gap: 0px;
+  /* margin-top: 0px; */
+}
+.subscribe-container form input {
+  border-radius: 50px 0px 0px 50px;
+  background: rgb(255, 255, 255);
+  width: 350px;
+  height: 50px;
+  border: none;
+  padding-left: 30px;
+}
+.subscribe-container form input [type="placeholder"] {
+  color: rgba(7, 2, 17, 0.3);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+  text-align: center;
+}
+.subscribe-container button {
+  width: 130px;
+  height: 50px;
+  border-radius: 0px 50px 50px 0px;
+  background: rgb(255, 0, 0);
+  text-align: center;
+  padding: 13px 26px;
+  color: white;
+  border: none;
+  margin-top: 50px;
 }
