--- a/styles/index.css
+++ b/styles/index.css
@@ -294,3 +294,48 @@ img {
   border: none;
   margin-top: 50px;
 }
+
+/* footer section styles */
+.footer-container {
+  width: 100%;
+  /* height: 500px; */
+  background: rgb(7, 2, 17);
+}
+.footer-container .footer-contact-container {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 100px;
+}
+.footer-container .footer-contact-add,
+.footer-contact-info {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 30px;
+  text-align: left;
+  width: 305px;
+}
+.footer-container .footer-contact-info img {
+  /* width: 14px;
+  height: 14px;
+  border: 1.5px solid rgb(255, 255, 255);
+  display: inline; */
+}
+
+.footer-container .footer-icon hr {
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  width: 82%;
+  max-width: 1320px;
+  margin: 40px auto;
+}
+.footer-container .footer-icon .social-icons {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+}
+.footer-container .footer-icon .social-icons img {
+  width: 35px;
+  height: 35px;
+  margin-top: 1px;
+}
