--- a/styles/index.css
+++ b/styles/index.css
@@ -298,31 +298,31 @@ img {
 /* footer section styles */
 .footer-container {
   width: 100%;
-  /* height: 500px; */
+  height: 505px;
   background: rgb(7, 2, 17);
+}
+.footer-container p {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
 }
 .footer-container .footer-contact-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 82%;
+  margin: 0px auto;
   padding-top: 100px;
 }
 .footer-container .footer-contact-add,
 .footer-contact-info {
-  color: rgb(255, 255, 255);
-  font-family: Inter;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 30px;
-  text-align: left;
   width: 305px;
 }
-.footer-container .footer-contact-info img {
-  /* width: 14px;
-  height: 14px;
-  border: 1.5px solid rgb(255, 255, 255);
-  display: inline; */
+.footer-contact-info img{
+    width: 13px;
+    height: 13px;
 }
-
 .footer-container .footer-icon hr {
   border: 1px solid rgba(255, 255, 255, 0.15);
   width: 82%;
@@ -338,4 +338,12 @@ img {
   width: 35px;
   height: 35px;
   margin-top: 1px;
+  margin-bottom: 1px;
+}
+
+.footer-container .footer-cpyright {
+  display: flex;
+  justify-content: space-between;
+  width: 82%;
+  margin: 0px auto;
 }
