--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,10 @@
   margin: 40px auto;
   height: 500px;
 }
-
+.join-now-container button:hover, .subscribe-container button:hover{
+    cursor: pointer;
+    background-color: palevioletred;
+}
 /* banner section styles */
 .container,
 .banner-content {
@@ -135,7 +138,10 @@ img {
   border: none;
   padding-left: 20px;
 }
-
+.welcome-party-container .welcome-party-content button:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
 /* join now section styles */
 .join-now-container {
   width: 82%;
@@ -336,11 +342,11 @@ img {
 }
 .portfolio-container .portfolio-img1 img:hover {
     transform: scale(1.1);
-    transition: transform 0.4s ease;
+    transition: transform 0.2s ease;
 }
 .portfolio-container .portfolio-img2 img:hover {
     transform: scale(1.1);
-    transition: transform 0.4s ease;
+    transition: transform 0.2s ease;
 }
 
 
